--- a/index.html
+++ b/index.html
@@ -495,6 +495,8 @@
             </table>
         </div>
     </div>
+
+
 </body>
 <script src="dist/app.min.js"></script>
 <script src="dist/app2.min.js"></script>
@@ -518,5 +520,12 @@
         });
     });
 </script>
+<script src="theme-switcher.min.js"></script>
+<script type="text/javascript">
+    $(document).ready(function() {
+        themeSwitcher.start();
+    });
+</script>
+
 
 </html>
